--- a/back/package.json
+++ b/back/package.json
@@ -22,12 +22,19 @@
     "@nestjs/common": "^11.0.16",
     "@nestjs/core": "^11.0.16",
     "@nestjs/platform-express": "^11.0.16",
+    "@nestjs/swagger": "^11.1.4",
+    "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.6",
     "@nestjs/schematics": "^11.0.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.14.1",
+    "prisma": "^6.6.0",
     "typescript": "^5.8.3"
   }
 }
