--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     command: sh -c "npm install && npm run dev"
 
   nestjs:
-    image: node:22-slim
+    build: ./back
     container_name: nestjs
     ports:
       - "127.0.0.1:3000:3000"
@@ -25,3 +25,23 @@ services:
       - PORT=3000
     working_dir: /app
     command: sh -c "npm install && npm run start:dev"
+    depends_on:
+      - postgres
+  
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: nest
+      POSTGRES_USER: nest
+      POSTGRES_DB: nest
+    volumes:
+      - ./back/postgres:/var/lib/postgresql/data
+
+  adminer:
+    image: adminer
+    container_name: adminer
+    restart: always
+    ports:
+      - 8080:8080
