--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nestjs/common": "^11.0.16",
     "@nestjs/core": "^11.0.16",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.16",
     "@nestjs/swagger": "^11.1.4",
     "@prisma/client": "^6.6.0",
