--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,34 @@
+version: '3.8'
+
 services:
-
-  react:
-    image: node:22-slim
-    container_name: react
-    ports:
-      - "127.0.0.1:2000:2000"
-    volumes:
-      - ./front:/app
-    environment:
-      - NODE_ENV=development
-      - PORT=2000
-    working_dir: /app
-    command: sh -c "npm install && npm run dev"
-
-  nestjs:
+  backend:
     build: ./back
-    container_name: nestjs
     ports:
-      - "127.0.0.1:3000:3000"
-    volumes:
-      - ./back:/app
+      - "3000:3000"
     environment:
-      - NODE_ENV=development
-      - PORT=3000
-    working_dir: /app
-    command: sh -c "npm install && npm run start:dev"
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/nestchat
     depends_on:
-      - postgres
-  
-  postgres:
-    image: postgres:15
-    container_name: postgres
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: nest
-      POSTGRES_USER: nest
-      POSTGRES_DB: nest
-    volumes:
-      - ./back/postgres:/var/lib/postgresql/data
+      - db
 
-  adminer:
-    image: adminer
-    container_name: adminer
-    restart: always
+  frontend:
+    build: ./front
     ports:
-      - 8080:8080
+      - "3001:3001"
+    environment:
+      - REACT_APP_API_URL=http://localhost:3000
+    depends_on:
+      - backend
+
+  db:
+    image: postgres:14
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=nestchat
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
