--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -8,10 +8,8 @@ RUN npm install
 
 COPY . .
 
-RUN npx prisma generate
-
 RUN npm run build
 
-EXPOSE 3000
+EXPOSE 3001
 
-CMD ["node", "dist/main.js"] 
+CMD ["npm", "run", "preview", "--", "--host", "0.0.0.0", "--port", "3001"] 
