--- a/back/package.json
+++ b/back/package.json
@@ -29,6 +29,9 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2"
   },
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
+  },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "ts-node-dev": "^2.0.0",
